@startuml
skinparam style strictuml
skinparam classAttributeIconSize 0

' ==== INTERFACES ====
interface CriterioMantenimiento {
  + cumple(hoy: Date, kmActual: number, ficha: FichaMantenimiento)
}

interface IMantenimientoPolicy {
  + requiere(hoy: Date, kmActual: number, ficha: FichaMantenimiento)
}

interface Tarifa {
  + calcularCosto(dias: number, kmRecorridos: number)
}

interface Temporada {
  + obtenerFactor()
  + aplicarCostoBase(costoBase: number)
}

' ==== MANTENIMIENTO ====
class CriterioPorAlquileres implements CriterioMantenimiento {
  + constructor(umbralAlquileres: number)
  + cumple(_hoy: Date, _kmActual: number, ficha: FichaMantenimiento)
}

class CriterioPorKilometraje implements CriterioMantenimiento {
  + constructor(umbralKm: number)
  + cumple(_hoy: Date, kmActual: number, ficha: FichaMantenimiento)
}

class CriterioPorMeses implements CriterioMantenimiento {
  + constructor(umbralMeses: number)
  + diffMeses(desde: Date, hasta: Date)
  + cumple(hoy: Date, _kmActual: number, ficha: FichaMantenimiento)
}

class EvaluadorMantenimientoPorCriterios implements IMantenimientoPolicy {
  + constructor(criterios: CriterioMantenimiento[])
  + requiere(hoy: Date, kmActual: number, ficha: FichaMantenimiento)
}

class FichaMantenimiento {
  - fechaUltimo: Date
  - kmUltimo: number
  - alquileresDesdeUltimo: number = 0
  + registrarMantenimiento(hoy: Date, kmActual: number, _costo: number)
  + registrarAlquilerCompletado()
  + huboAlgunaVezMantenimiento()
  + getters_y_setters()
}

' ==== NÚCLEO DEL DOMINIO ====
class RangoDeFechas {
  - inicio: Date
  - fin: Date
  + constructor(inicio: Date | string, fin: Date | string)
  + normalizarFecha(fecha: Date)
  + seCruzaCon(otro: RangoDeFechas)
  + esMismoDiaQueInicio(fecha: Date)
  + esAntesDeFin(fecha: Date)
  + esIgualOPosteriorAFin(fecha: Date)
  + diasDeDiferencia()
  + esIgualA(otro: RangoDeFechas)
  + getters_y_setters()
}

class Vehiculo {
  - bloqueos: RangoDeFechas[]
  - fichaMantenimiento: FichaMantenimiento
  + bloquear(rango: RangoDeFechas)
  + desbloquear(rango: RangoDeFechas)
  + limpiarBloqueos()
  + estaDisponible(periodo: RangoDeFechas)
  + notificarAlquilerCompletado()
  + marcarEnMantenimiento()
  + marcarLimpieza()
  + marcarDisponible()
  + getters_y_setters()
}

class Reserva {
  + marcarCumplida()
  + confirmarConVehiculo(v: Vehiculo)
  + cancelar()
  + getters_y_setters()
}

class Alquiler {
  + validarFinalizacion(kmFinal: number)
  + calcularCostoTotal()
  + finalizar(kmFinal: number)
  + getters_y_setters()
}

class Cliente {
  + getters_y_setters()
}

' SERVICIOS 
class DisponibilidadService {
  + estaLibre(rangoPedido: RangoDeFechas, bloqueos: RangoDeFechas[])
}

class ServicioDePrecios {
  + factorPara(periodo: RangoDeFechas)
  + aplicar(base: number, periodo: RangoDeFechas)
}

'  GESTORES
class GestorVehiculo {
  + agregar(v: Vehiculo)
  + listar()
  + marcarEnAlquiler(v: Vehiculo)
  + marcarLimpieza(v: Vehiculo)
  + actualizarKm(v: Vehiculo, km: number)
  + filtrarPorCategoria(categoria: CategoriaVehiculo)
}

class GestorReserva {
  - reservas: Reserva[]
  + agregar(r: Reserva)
  + crearPendiente(clienteId: string, fechaInicio: Date, fechaFin: Date)
  + confirmar(reserva: Reserva, vehiculo: Vehiculo | null)
  + cancelar(reserva: Reserva)
  + listar()
  + generarIdReserva()
}

class GestorAlquiler {
  + agregar(a: Alquiler)
  + listar()
  + crear(reserva: Reserva, vehiculo: Vehiculo)
  + iniciarAlquileresProgramadosDelDia(reservas: Reserva[], fechaActual: Date)
  + finalizar(alquiler: Alquiler, kmFinal: number, _fechaActual: Date)
}

' SISTEMA 
class SistemaAlquiler {
  + agregarVehiculo(v: Vehiculo)
  + listarVehiculos()
  + listarReservas()
  + crearReservaPendiente(clienteId: string, fechaInicio: Date, fechaFin: Date)
  + buscarVehiculoDisponible(categoria: CategoriaVehiculo, rangoPedido: RangoDeFechas): Vehiculo | null
  + ConfirmarReserva(reserva: Reserva, categoria: CategoriaVehiculo)
  + iniciarAlquileresDelDia(reservas: Reserva[], fechaActual: Date)
  + finalizarAlquiler(alquiler: Alquiler, kmFinal: number, fechaActual: Date)
  + listarAlquileres()
}

'  TARIFAS 
class TarifaCompacto implements Tarifa
class TarifaSedan implements Tarifa
class TarifaSUV implements Tarifa

' TEMPORADAS 
class SelectorTemporada {
  + obtener(fechaInicio: Date)
}

class TemporadaAlta implements Temporada
class TemporadaBaja implements Temporada
class TemporadaMedia implements Temporada {
  
}


SistemaAlquiler *-- GestorVehiculo : gestorVehiculo
SistemaAlquiler *-- GestorReserva : gestorReserva
SistemaAlquiler *-- GestorAlquiler : gestorAlquiler
GestorReserva o-- Reserva : reservas
GestorAlquiler o-- Alquiler : alquileres
GestorVehiculo o-- Vehiculo : vehiculos
Vehiculo *-- FichaMantenimiento : fichaMantenimiento
Vehiculo o-- RangoDeFechas : bloqueos
Vehiculo o-- Tarifa
Reserva --> Vehiculo
Alquiler --> Reserva
Alquiler --> Vehiculo
EvaluadorMantenimientoPorCriterios o-- CriterioMantenimiento : criterios
ServicioDePrecios --> Temporada
DisponibilidadService --> Vehiculo
GestorAlquiler --> IMantenimientoPolicy
Alquiler ..> ServicioDePrecios
SelectorTemporada --> Temporada
Reserva o-- Cliente
@enduml
